# powerplanner

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN.md  PRD.md  README.md  eslint.config.js  index.html  manifest.xml  package-lock.json  package.json  playwright.config.ts  taskpane.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.export.config.ts
native/: CMakeLists.txt  _run_all_builds.cmd  build-appbar-shot.bat  build-conformance.bat  build-keys-probe.bat  build-ops.bat  build-overlay.bat  build-reflow.bat  build-render.bat  build-showcase.bat  build-undo-probe.bat  build-unit.bat  build-window-probe.bat  build.bat  build.ps1  register.bat  sources.bat  start.bat  unregister.bat
native/PowerPlannerAddin/: Connect.cpp  Connect.h  Connect.rgs  EntityDump.h  GanttAppBar.h  GanttAxisLayout.h  GanttBuilder.cpp  GanttBuilder.h  GanttCommandRegistry.h  GanttHitTest.cpp  GanttHitTest.h  GanttJson.cpp  GanttJson.h  GanttLayout.cpp  GanttLayout.h  GanttModel.h  GanttOps.cpp  GanttOps.h  GanttScene.h  GanttTheme.h  Overlay.cpp  Overlay.h  OverlayFormat.h  OverlayGeometry.h  OverlayMetrics.h  PowerPlannerAddin.def  PowerPlannerAddin.rc  PptRenderer.cpp  PptRenderer.h  Scene.h  ThemeMenu.cpp  ThemeMenu.h  dllmain.cpp  pch.cpp  pch.h  resource.h
native/conformance/: conformance.cpp
native/ops/: ops-test.cpp
native/render/: appbar-shot.cpp  keys-probe.cpp  overlay-test.cpp  reflow-test.cpp  render-harness.cpp  showcase.cpp  undo-probe.cpp  window-probe.cpp
native/tools/: README.md  __init__.py  _patch_overlay.py  _patch_text_branch.py  (+7 more)
(+206 files in other folders)
